# annealing-sudoku

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  annealing.c  annealing.h  config.h.in  containers.c  interface.c  interface.h  main.c  puzzle.c  puzzle.h  rng.c  rng.h
